# MyMuduo

./: .gitignore  CMakeLists.txt  Project.md  README.md  init.sql
benchmark/: echo_server.cpp  tcp_bench.cpp
docs/: architecture.md  db.md  performance_and_design.md  proto.md  web_framework.md
examples/chat_server/: main.cpp
examples/http/: main.cpp
examples/http/static/: index.html  login.html  register.html
include/: Acceptor.h  Buffer.h  Channel.h  Connector.h  EpollPoller.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  Log.h  NoCopy.h  Poller.h  Sock.h  Socket.h  TcpConnection.h  TcpServer.h  TimeWheel.h  TimerQueue.h
include/base/: Crypto.h  Exception.h  NoCopy.h  Timestamp.h
include/cache/: RedisCache.h  RedisDao.h  RedisPool.h
include/db/: ConnectionPool.h  Database.h  FriendDao.h  PrivateMessageDao.h  UserDao.h
include/net/: Acceptor.h  Buffer.h  Connector.h  EpollPoller.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  InetAddress.h  Log.h  Poller.h  Socket.h  TcpConnection.h  TcpServer.h  TimeWheel.h  Timer.h  TimerQueue.h
include/proto/: Codec.h  Dispatcher.h  Message.h  MessageType.h  Protocol.h
include/service/: ChatServer.h  EmailSender.h  FriendService.h  UserService.h
scripts/: InitGithub.sh  createfiles.sh  renamefiles.sh  run.sh
src/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Connector.cpp  EpollPoller.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  InetAddress.cpp  Log.cpp  Poller.cpp  Sock.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp  TimeWheel.cpp  Timer.cpp  TimerQueue.cpp
src/base/: Crypto.cpp
src/cache/: RedisCache.cpp  RedisDao.cpp  RedisPool.cpp
src/db/: ConnectionPool.cpp  Database.cpp  FriendDao.cpp  PrivateMessageDao.cpp  UserDao.cpp
src/net/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Connector.cpp  EpollPoller.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  InetAddress.cpp  Log.cpp  Poller.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp  TimeWheel.cpp  Timer.cpp  TimerQueue.cpp
src/proto/: Codec.cpp  Message.cpp
src/service/: ChatServer.cpp  EmailSender.cpp  FriendService.cpp  UserService.cpp
static/css/: style.css  themes.css
static/html/: 404.html  index.html  login.html  profile.html  register.html
static/js/: app.js
test/: main.cpp  test_acceptor.cpp  test_acceptor_client.cpp  test_buffer.cpp  test_connector.cpp  test_connector_client.cpp  test_db.cpp  test_epoll_poller.cpp  test_eventloop.cpp  test_friend_dao.cpp  test_friend_service.cpp  test_inetaddress.cpp  test_log.cpp  test_proto.cpp  test_redis_cache.cpp  test_redis_dao.cpp  test_redis_pool.cpp  test_regex.cpp  test_server.cpp  test_socket.cpp  test_socket_client.cpp  test_tcp_server.cpp  test_user_service_redis.cpp
